FP-1098 В структуру serviceDetails внесены изменения в соответствии с новой версией протокола FP-1099 Реализован второй поисковой запрос задолженностей в соответствием с протоколом
Добавлен модуль для тестирования запросов терминалов